--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://peter-d-han.github.io/movie_app_2019"
+  "homepage": "https://han-d-peter.github.io/movie_app_2019"
 }
